# simple-maps

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
simple_maps/: __main__.py  cartes.py  cli.py  util.py
src/simple_maps/: __init__.py  __main__.py  cartes.py  cli.py  util.py
tests/: __init__.py  test_cartes.py  test_cli.py  test_integration.py  test_simple_maps.py  test_util.py
