[tool.poetry]
name = "simple-maps"
version = "0.1.0"
description = "Tool to create maps with markers using cartes.io API"
authors = ["Julio Batista Silva <julio@juliobs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jbsilva/simple-maps"
keywords = ["map", "cli", "cartes", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
