[tool.poetry]
name = "simple-maps"
version = "0.1.0"
description = "Tool to create maps with markers using cartes.io API"
authors = ["Julio Batista Silva <julio@juliobs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jbsilva/simple-maps"
keywords = ["map", "cli", "cartes", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
mypy = "^0.910"
gitchangelog = "^3.0.4"
mkdocs = "^1.2.2"
pydocstyle = "^6.1.1"
pylama = "^7.7.1"
bandit = "^1.7.0"
types-requests = "^2.25.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simple_maps = "simple_maps.cli:app"
