[project]
name = "simple-maps"
version = "0.2.0"
description = "Tool to create maps with markers using cartes.io API"
readme = "README.md"
requires-python = ">=3.14,<4"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = "MIT"
keywords = ["map", "cli", "cartes", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "typer>=0.21.1"
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mkdocs>=1.6.1",
    "ruff>=0.14.14",
    "zuban>=0.4.2"
]
test = [
    "inline-snapshot>=0.31.1",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.2.0",
    "pytest-xdist[psutil]>=3.8.0",
    "pytest>=9.0.2",

]

[project.urls]
Homepage = "https://juliobs.com/projects/simple-maps/"
Documentation = "https://github.com/jbsilva/simple-maps"
Repository = "https://github.com/jbsilva/simple-maps"
Issues = "https://github.com/jbsilva/simple-maps/issues"

[project.scripts]
simple_maps = "simple_maps.cli:app"

[build-system]
requires = ["uv_build >= 0.9.26"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
]

[tool.ruff.lint.per-file-ignores]
"tests/{test_*.py,conftest.py}" = [
    "S101", # Allow assert in tests
    "S105", # Allow hardcoded password in tests
    "S106", # Allow hardcoded password in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2

[tool.zuban]
strict = true
disallow_untyped_defs = true
warn_unreachable = true
python_executable = ".venv/bin/python"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--durations=10",
    "--import-mode=importlib",
    "--random-order",
    "--numprocesses=logical",
    "--dist=load",
    "--tb=short",
    "--verbose",
    "--cov=src/simple_maps",
    "--cov-report=term-missing",
    "-m",
    "not integration",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.inline-snapshot]
format-command = "ruff check --fix-only --stdin-filename {filename} | ruff format --stdin-filename {filename}"

[tool.coverage.run]
omit = ["src/simple_maps/__main__.py"]
